# QGISDresserPlugin

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
QGISDresser/: __init__.py  metadata.txt  plugin.py  plugin_dialog.py  plugin_dialog.ui
QGISDresser/preset/: list.yml
tests/: conftest.py  test_plugin.py
